--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ body {
   margin: 0;
   font-family: helvetica,Arial,sans-serif;
   font-weight: 600;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
   box-sizing: border-box;
   color: #fff;
 }
