added contacts and minor improvements

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -183,6 +183,9 @@
         &:hover
             opacity: .4
 
+        &--email
+            color: #000000
+
     
     
     &__listWithDots
@@ -269,7 +272,7 @@
                 line-height: 1.416666666666667
                 
 
-.adPlatform, .carrierBillingAggregatorPlatform
+.adPlatform, .carrierBillingAggregatorPlatform, .contacts
     @media (max-width: 640px)
         padding-top: 8.462rem
 
