--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -26,10 +26,6 @@
         @media (max-width: 640px)
             width: 50%
         
-        // &.hidden
-        //     @media (min-width: 640px)
-        //         visibility: visible
-
         a   
             position: relative
             display: block
@@ -141,6 +137,18 @@
 
             &:hover
                 opacity: .4
+
+            &--social
+                display: inline-block
+                width: 20px
+                height: 20px
+
+                &:last-of-type
+                    margin-left: 5px
+
+                img
+                    width: 100%
+                    height: 100%
     
     &.dark
         background: #ffffff
