--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -93,6 +93,23 @@
             right: $fourBlocks
             border-left: none
 
+.loader
+    position: absolute
+    top: 44%
+    left: 61%
+    width: 40px
+    height: 40px
+    border-radius: 50%
+    border: 6px solid #000
+    border-right: 5px solid transparent
+    animation: rotate 2s infinite 
+
+@keyframes rotate
+    0%
+        transform: rotate(0deg)
+    100%
+        transform: rotate(360deg)
+
 .content
     position: relative
     min-height: 100vh
