news item media queries

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -104,6 +104,13 @@
     border-right: 5px solid transparent
     animation: rotate 2s infinite 
 
+    @media (max-width: 1200px)
+        left: 64.3%
+
+    @media (max-width: 640px)
+        left: 45%
+        top: 40%
+
 @keyframes rotate
     0%
         transform: rotate(0deg)
