--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -25,6 +25,12 @@
         text-decoration: none
         transition: all .2s ease
 
+        @media ( max-width: 1200px )
+            left: 25%
+
+        @media (max-width: 640px)
+            display: none
+
         &:hover
             opacity: .4
 
