added feedback page

--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -195,6 +195,5 @@
             &--active
                 color: #091cab
 
-        &.bg-transparent
-            background: #ffffff00
-            
+    &.white
+        background: #101010
