--- a/src/styles/pages/mediaBuyingTeam.sass
+++ b/src/styles/pages/mediaBuyingTeam.sass
@@ -30,13 +30,13 @@
             font-size: 3.6rem
 
         @media (max-width: 953px) and (min-width: 641px)
-            padding-right: $basePagePadding / 2
+            padding-right: calc($basePagePadding / 2)
 
         @media (max-width: 808px) and (min-width: 641px)
             font-size: 3rem
 
         @media (max-width: 640px)
-            padding-right: $mobilePagePadding / 2
+            padding-right: calc($mobilePagePadding / 2)
             font-size: 4.3rem
 
         &::after 
