--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -66,3 +66,22 @@
             svg
                 width: 100%
                 height: 100%
+    
+    &__closeFeedback
+        color: #ffffff
+        transition: all .2s ease
+        cursor: pointer
+        display: block
+        background: none
+        border: 0
+        -webkit-tap-highlight-color: transparent
+        position: absolute
+        left: 80%
+        bottom: 0
+        font: inherit
+
+        @media (max-width: 1200px)
+            left: 75%
+
+        &:hover
+            opacity: .4
