--- a/src/styles/layout/App.sass
+++ b/src/styles/layout/App.sass
@@ -1,14 +1,14 @@
-@import './variables'
+@import './../helpers/variables'
 
 @font-face
     font-family: helvetica
-    src: url(../fonts/helvetica/Helvetica.woff2) format('woff2'), url(../fonts/helvetica/Helvetica.woff) format('woff')
+    src: url(../../fonts/helvetica/Helvetica.woff2) format('woff2'), url(../../fonts/helvetica/Helvetica.woff) format('woff')
     font-weight: 300
     font-style: normal
 
 @font-face
     font-family: helvetica
-    src: url(../fonts/helvetica/HelveticaBold.woff2) format('woff2'), url(../fonts/helvetica/HelveticaBold.woff) format('woff')
+    src: url(../../fonts/helvetica/HelveticaBold.woff2) format('woff2'), url(../../fonts/helvetica/HelveticaBold.woff) format('woff')
     font-weight: 600
     font-style: normal
 
@@ -51,7 +51,7 @@
         bottom: 0
 
     &__image
-        background-image: url(../img/background.jpeg)
+        background-image: url(../../img/background.jpeg)
         background-size: cover
         background-position: center
         opacity: .4
