--- a/src/styles/pages/contacts.sass
+++ b/src/styles/pages/contacts.sass
@@ -1,4 +1,4 @@
-
+@import './../helpers/variables'
 
 .contacts
     &__wrapper
@@ -10,7 +10,7 @@
             flex-wrap: wrap
 
     &__column
-        width: 25%
+        width: $fourBlocks
         margin-bottom: 12.7em
 
         @media (max-width: 1200px)
