--- a/src/styles/pages/newsItem.sass
+++ b/src/styles/pages/newsItem.sass
@@ -1,4 +1,4 @@
-@import './../variables'
+@import './../helpers/variables'
 
 .newsItem
     @media (max-width: 640px)
@@ -42,7 +42,7 @@
         right: 100%
         top: 0
         margin: 0
-        font-size: 1.154rem
+        font-size: $mediumFontSize
         line-height: 1.733333333333333
         width: max-content
 
