--- a/src/styles/pages/news.sass
+++ b/src/styles/pages/news.sass
@@ -1,4 +1,4 @@
-@import './../variables'
+@import './../helpers/variables'
 
 .news
     @media (max-width: 640px)
@@ -20,7 +20,7 @@
 
     &__month
         width: 33.333333%
-        font-size: 1.154rem
+        font-size: $mediumFontSize
         line-height: 1.733333333333333
         font-weight: 300
         position: absolute
@@ -31,7 +31,7 @@
             position: relative
             left: auto
             margin-bottom: 1.154rem
-            font-size: 1.846rem
+            font-size: $bigFontSize
             padding: 0
 
     &__list
@@ -62,17 +62,17 @@
             margin-bottom: 0.769rem
 
         &__month
-            font-size: 1.154rem
+            font-size: $mediumFontSize
             line-height: 1.733333333333333
             color: #dfdfdf
             margin-bottom: 1.846rem
             margin-top: 0
 
             @media (max-width: 640px)
-                font-size: 1.846rem
+                font-size: $bigFontSize
 
         &__title
-            font-size: 1.846rem
+            font-size: $bigFontSize
             line-height: 1.416666666666667
             text-decoration: underline
             margin: 0
